SQ Plugin: Remove dependency on Google Guava library (#9546)